src/objects/DRE__DRE_Action_Attribute__mdt.object
<CustomObject>
    <fields>
        <fullName>DRE__DRE_Action__c</fullName>
        <label>DRE Action</label>
        <referenceTo>DRE__DRE_Action__mdt</referenceTo>
        <relationshipLabel>DRE Action Attributes</relationshipLabel>
        <relationshipName>DRE_Action_Attributes</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>DRE__Help_Text__c</fullName>
        <label>Help Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__Order__c</fullName>
        <defaultValue>99</defaultValue>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DRE Action Attribute</label>
    <listViews>
        <fullName>DRE__All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>DRE__DRE_Action__c</columns>
        <columns>DRE__Help_Text__c</columns>
        <columns>DRE__Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>DRE Action Attributes</pluralLabel>
</CustomObject>